src/app/app.component.css
.flex-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
}
  
.flex-column {
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
    flex: 1;
}

.theme-slide-toggle {
    left: 10px;
    position: relative;
    pointer-events: none;
}

.sidenav-container {
    z-index: -1 !important;
}

.top-toolbar {
    height: 64px;
    background: unset;
}

::ng-deep .top-menu-button > span {
    width: 85px;
    height: 26px;
}

::ng-deep .mdc-switch {
    outline: none !important;
}

